# SpendWeiss

./: .gitignore  JOURNAL.md  README.md
.github/workflows/: ci.yml
backend/: groq_client.py  pyproject.toml
backend/phase4_langgraph/: graph.py
backend/phase5_critic/: graph.py
backend/phase6_multiagent/: subscription_hunter.py  supervisor.py
backend/phase8_api/: app.py  graph_structure.py  reply_formatting.py  sessions.py
backend/tests/: test_groq_round_robin.py  test_phase4_graph.py  test_phase6_multiagent.py  test_phase7_human_loop.py  test_phase8_api.py  test_reply_formatting.py
docs/superpowers/plans/: 2026-07-16-phase4-langgraph-plan.md
docs/superpowers/specs/: 2026-07-16-phase4-langgraph-design.md
frontend/: index.html  tailwind.config.ts
frontend/src/: index.css
